# talent-hunter-agent

./: .dockerignore  .gitignore  Dockerfile.fastapi  Dockerfile.fastapi-multistage  Dockerfile.streamlit  Makefile  README.md  docker-compose.yaml  pyproject.toml
backend/: config.py  main.py
backend/agent/: agent.py
backend/agent/tools/: vector_store.py
experiments/: agentic_insert.ipynb  evaluation.ipynb
frontend/: ui.py
k8s/: deployment.yml  service.yml
prompts/: system_prompt.py
