[project]
name = "talent-hunter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
]
