[project]
name = "talent-hunter-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "langchain-openai>=0.3.27",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langgraph>=0.5.1",
    "qdrant-client>=1.14.3",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.46.1",
    "uvicorn>=0.35.0",
    "openevals>=0.1.0",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
